--- a/DBSBloboDiary/src/main/res/values/strings.xml
+++ b/DBSBloboDiary/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="long_squeeze_duration">SHARE_PREFERENCES_LONG_SQUEEZE_DURATION</string>
     <string name="hello_world">Hello world!</string>
     <string name="long_squeeze">Long Squeeze</string>
-    <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_map">Map View</string>
 
     <!-- ShowTimeDataActivity intent extra -->
     <string name="showtimedata_point_location_long">SHOWTIMEDATA_POINT_LOCATION_LONG</string>
