--- a/DBSBloboDiary/src/main/res/values/strings.xml
+++ b/DBSBloboDiary/src/main/res/values/strings.xml
@@ -5,11 +5,12 @@
 
     <!-- Menu Strings -->
     <string name="menu_connect_blobo">Connect Blobo</string>
-    <string name="menu_show_time_data">Show Time Data</string>
-    <string name="menu_show_map">Show Map</string>
+    <string name="menu_show_time_data">Show By Time</string>
+    <string name="menu_show_map">Show By Map</string>
     <string name="menu_reflection">Reflection</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
+    <string name="menu_show_map_from_time">Show All On Map</string>
 
     <!-- DBS URL -->
     <string name="dbs_url">http://digitalbrainswitch.co.uk/</string>
@@ -19,9 +20,15 @@
     <string name="bt_status_not_connected">Not Connected</string>
 
     <!-- Titles -->
-    <string name="title_activity_show_time_data">Show Time Data</string>
+    <string name="title_activity_show_time_data">Time View</string>
     <string name="title_activity_about">About DBS</string>
     <string name="title_device_list">Select a Device to Connect</string>
+    <string name="title_activity_map_list">Pick a Day</string>
+    <string name="title_activity_time_data_list">Pick a Day</string>
+    <string name="title_activity_history">History</string>
+    <string name="title_activity_map">Map View</string>
+
+    <string name="stored_data_directory">/Download/data</string>
 
     <!-- Text -->
     <string name="text_about">        Digital Brain Switch (DBS) is a project funded by the Engineering and Physical Sciences Research Council (EPSRC), which brings together computer science and social science. It is a collaboration between Lancaster University; The Open University; Royal Holloway, University of London; and University of Kent. The project is led by Prof. Jon Whittle from the School of Computing &amp; Communications at Lancaster University.
@@ -47,7 +54,6 @@
     <string name="button_scan">Scan for devices</string>
     <string name="title_activity_settings">Settings</string>
     <string name="pin">Pin</string>
-    <string name="title_activity_history">History</string>
 
     <!-- Shared Preference Keys (for blobo threshold settings) -->
     <string name="pressure_max">SHARE_PREFERENCES_PRESSURE_MAX</string>
@@ -56,12 +62,10 @@
     <string name="long_squeeze_duration">SHARE_PREFERENCES_LONG_SQUEEZE_DURATION</string>
     <string name="hello_world">Hello world!</string>
     <string name="long_squeeze">Long Squeeze</string>
-    <string name="title_activity_map">Map View</string>
 
     <!-- ShowTimeDataActivity intent extra -->
     <string name="showtimedata_point_location_long">SHOWTIMEDATA_POINT_LOCATION_LONG</string>
     <string name="showtimedata_point_location_lat">SHOWTIMEDATA_POINT_LOCATION_LAT</string>
-    <string name="title_activity_time_data_list">Recorded Dates</string>
 
     <!-- Latitude, longitude format -->
     <string name="latitude_longitude">%1$.8f, %2$.8f</string>
@@ -73,6 +77,7 @@
     <string name="multiple_map_points">MULTIPLE_MAP_POINTS</string>
     <string name="single_map_point">SINGLE_MAP_POINT</string>
 
-    <string name="stored_data_directory">/Download/data</string>
-    <string name="title_activity_map_list">Map List Activity</string>
+
+
+
 </resources>
