--- a/DBSBloboDiary/src/main/res/values/strings.xml
+++ b/DBSBloboDiary/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <!-- Menu Strings -->
     <string name="menu_connect_blobo">Connect Blobo</string>
+    <string name="menu_show_events">Show Recorded Events</string>
     <string name="menu_show_time_data">Show Events By Time</string>
     <string name="menu_show_map">Show Events By Map</string>
     <string name="menu_reflection">Diary</string>
@@ -27,7 +28,10 @@
     <string name="title_activity_time_data_list">Pick a Day</string>
     <string name="title_activity_history">History</string>
     <string name="title_activity_map">Map View</string>
+
+    <!-- Directories -->
     <string name="stored_data_directory">/Download/data</string>
+    <string name="stored_diary_directory">/Download/diary</string>
 
     <!-- Text -->
     <string name="text_about">        Digital Brain Switch (DBS) is a project funded by the Engineering and Physical Sciences Research Council (EPSRC), which brings together computer science and social science. It is a collaboration between Lancaster University; The Open University; Royal Holloway, University of London; and University of Kent. The project is led by Prof. Jon Whittle from the School of Computing &amp; Communications at Lancaster University.
@@ -74,10 +78,11 @@
     <string name="intent_extra_selected_file_name">INTENT_EXTRA_SELECTED_FILE_NAME</string>
     <string name="intent_extra_time_location">INTENT_EXTRA_TIME_LOCATION</string>
     <string name="intent_extra_number_of_map_points">INTENT_EXTRA_NUMBER_OF_MAP_POINTS</string>
->            <string name="multiple_map_points">MULTIPLE_MAP_POINTS</string>
+>                <string name="multiple_map_points">MULTIPLE_MAP_POINTS</string>
     <string name="single_map_point">SINGLE_MAP_POINT</string>
     <string name="title_activity_reflection">DBS Diary</string>
     <string name="title_activity_view_an_event">View An Event Activity</string>
     <string name="title_activity_calendar_date_picker">Calendar Date Picker</string>
+    <string name="title_activity_show_events">Show Events</string>
 
 </resources>
