Fixed minor bugs caused by saving createdTimeLong variable. Added a new map button for AddDiaryEntryActivity

--- a/DBSBloboDiary/src/main/res/values/strings.xml
+++ b/DBSBloboDiary/src/main/res/values/strings.xml
@@ -30,8 +30,8 @@
     <string name="title_activity_map">Map View</string>
 
     <!-- Directories -->
-    <string name="stored_data_directory">/Download/data</string>
-    <string name="stored_diary_directory">/Download/diary</string>
+    <string name="stored_data_directory">/Download/DBSBloboDiary/eventdata</string>
+    <string name="stored_diary_directory">/Download/DBSBloboDiary/diary</string>
 
     <!-- About Text -->
     <string name="text_about">
