--- a/DBSBloboDiary/src/main/res/values/strings.xml
+++ b/DBSBloboDiary/src/main/res/values/strings.xml
@@ -53,12 +53,12 @@
     <string name="no_pressure_value">----------------------------</string>
 
     <!-- DeviceListActivity -->
-    <string name="scanning">scanning for devices...</string>
-    <string name="select_device">select a device to connect</string>
+    <string name="scanning">Scanning for devices...</string>
+    <string name="select_device">Select a device to connect</string>
     <string name="none_paired">No devices have been paired</string>
     <string name="none_found">No devices found</string>
     <string name="title_paired_devices">Paired Devices</string>
-    <string name="title_other_devices">Other Available Devices</string>
+    <string name="title_other_devices">Available Devices</string>
     <string name="button_scan">Scan for devices</string>
     <string name="title_activity_settings">Settings</string>
     <string name="pin">Pin</string>
@@ -70,6 +70,8 @@
     <string name="pressure_threshold">SHARE_PREFERENCES_PRESSURE_THRESHOLD</string>
     <string name="long_squeeze_duration">SHARE_PREFERENCES_LONG_SQUEEZE_DURATION</string>
     <string name="calibration_test">SHARE_PREFERENCES_CALIBRATION_TEST</string>
+    <string name="SMA_window_size">SHARE_PREFERENCES_SMA_WINDOW_SIZE</string>
+
     <string name="hello_world">Hello world!</string>
     <string name="long_squeeze">Long Squeeze</string>
 
@@ -102,7 +104,7 @@
     <string name="title_activity_add_diary_entry">Diary Entry</string>
 
     <!-- Reflection Activity -->
-    <string name="reflection_activity_view_entries">View Recorded Entries</string>
+    <string name="reflection_activity_view_entries">View Recorded Diary Entries</string>
     <string name="reflection_activity_add_entry">Add A New General Entry</string>
 
     <!-- Add Diary Entry -->
