--- a/DBSBloboDiary/src/main/res/values/strings.xml
+++ b/DBSBloboDiary/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="menu_reflection">Diary</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
+    <string name="menu_show_pressure_values">Show Pressure</string>
     <string name="menu_show_map_from_time">Show All On Map</string>
 
     <!-- DBS URL -->
@@ -28,6 +29,12 @@
     <string name="title_activity_time_data_list">Select a Day</string>
     <string name="title_activity_history">History</string>
     <string name="title_activity_map">Map View</string>
+    <string name="title_activity_reflection">DBS Diary</string>
+    <string name="title_activity_view_an_event">View An Event Activity</string>
+    <string name="title_activity_calendar_date_picker">Calendar Date Picker</string>
+    <string name="title_activity_show_events">Show Events</string>
+    <string name="title_activity_add_diary_entry">Diary Entry</string>
+    <string name="title_activity_hidden_settings">Hidden Settings</string>
 
     <!-- Directories -->
     <string name="stored_data_directory">/Download/DBSBloboDiary/eventdata</string>
@@ -71,7 +78,6 @@
     <string name="long_squeeze_duration">SHARE_PREFERENCES_LONG_SQUEEZE_DURATION</string>
     <string name="calibration_test">SHARE_PREFERENCES_CALIBRATION_TEST</string>
     <string name="SMA_window_size">SHARE_PREFERENCES_SMA_WINDOW_SIZE</string>
-
     <string name="hello_world">Hello world!</string>
     <string name="long_squeeze">Long Squeeze</string>
 
@@ -97,11 +103,6 @@
     <string name="intent_extra_diary_entry_location_longitude">INTENT_EXTRA_DIARY_LOCATION_LONGITUDE</string>
     <string name="intent_extra_diary_entry_created_time">INTENT_EXTRA_DIARY_CREATED_TIME</string>
     <string name="intent_extra_disable_diary_in_map">INTENT_EXTRA_DISABLE_DIARY_IN_MAP</string>
-    <string name="title_activity_reflection">DBS Diary</string>
-    <string name="title_activity_view_an_event">View An Event Activity</string>
-    <string name="title_activity_calendar_date_picker">Calendar Date Picker</string>
-    <string name="title_activity_show_events">Show Events</string>
-    <string name="title_activity_add_diary_entry">Diary Entry</string>
 
     <!-- Reflection Activity -->
     <string name="reflection_activity_view_entries">View Recorded Diary Entries</string>
@@ -126,6 +127,9 @@
     <string name="diary_entry_empty_location_general_entry">General Entry - No Event Location.</string>
     <string name="diary_entry_empty_latitude">NO_LATITUDE</string>
     <string name="diary_entry_empty_longitude">NO_LONGITUDE</string>
-    <string name="title_activity_hidden_settings">Hidden Settings</string>
+
+    <!-- Show Time Data Activity -->
+    <string name="button_show_all_on_map">Show All On Map</string>
+    <string name="title_activity_show_pressure">Recorded Pressure View</string>
 
 </resources>
