--- a/DBSBloboDiary/src/main/res/values/strings.xml
+++ b/DBSBloboDiary/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="menu_show_pressure_values">Show Pressure</string>
+    <string name="menu_show_time_line_from_pressure">Show Timeline</string>
     <string name="menu_show_map_from_time">Show All On Map</string>
 
     <!-- DBS URL -->
@@ -42,9 +43,10 @@
     <string name="stored_diary_values_directory">/Download/DBSBloboDiary/diaryvalues</string>
 
     <!-- About Text -->
-    <string name="text_about">        Digital Brain Switch (DBS) is a project funded by the Engineering and Physical Sciences Research Council (EPSRC), which brings together computer science and social science. It is a collaboration between Lancaster University; The Open University; Royal Holloway, University of London; and University of Kent. The project is led by Prof. Jon Whittle from the School of Computing &amp; Communications at Lancaster University.
-        \n\nEmail: DBS-Project@open.ac.uk</string>
-    <string name="text_version">0.1</string>
+    <string name="text_about">
+        Digital Brain Switch (DBS) is a project funded by the Engineering and Physical Sciences Research Council (EPSRC), which brings together computer science and social science. It is a collaboration between Lancaster University; The Open University; Royal Holloway, University of London; and University of Kent. The project is led by Prof. Jon Whittle from the School of Computing &amp; Communications at Lancaster University.\n\nEmail: DBS-Project@open.ac.uk\n\nThe DBS Blobo App has been developed using the following third party libraries:\n\n*AChartEngine (http://achartengine.org/) Copyright © 2009-2013 The 4ViewSoft Company.
+    </string>
+    <string name="text_version">1.0</string>
 
     <!-- Settings -->
     <string name="settings_error_title">Settings Error</string>
